--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,15 @@
     "prisma": "^6.6.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0"
+    "@prisma/client": "^6.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2"
   },
   "scripts": {
     "seed": "node prisma/seed.js"
-  }
+  },
+  "type": "module"
 }
